{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 169,
  "lineage": "8aae7d94-57c7-8636-8a48-e443b15aef31",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09c6c92fd0dbc5665",
            "arn": "arn:aws:ec2:us-west-1:271525114120:elastic-ip/eipalloc-09c6c92fd0dbc5665",
            "domain": "vpc",
            "id": "eipalloc-09c6c92fd0dbc5665",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-241-10-192.us-west-1.compute.amazonaws.com",
            "public_ip": "54.241.10.192",
            "public_ipv4_pool": "amazon",
            "region": "us-west-1",
            "tags": {
              "Name": "EIP-AnyCompany"
            },
            "tags_all": {
              "Name": "EIP-AnyCompany"
            }
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway_main_a",
            "aws_vpc.main_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway_main_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:271525114120:internet-gateway/igw-0bba4828c192440fb",
            "id": "igw-0bba4828c192440fb",
            "owner_id": "271525114120",
            "region": "us-west-1",
            "tags": {
              "Name": "IGW-AnyCompany-1"
            },
            "tags_all": {
              "Name": "IGW-AnyCompany-1"
            },
            "vpc_id": "vpc-00fa887fe40a32637"
          },
          "dependencies": [
            "aws_vpc.main_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway_main_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:271525114120:internet-gateway/igw-0d9fe044bf03f382e",
            "id": "igw-0d9fe044bf03f382e",
            "owner_id": "271525114120",
            "region": "us-west-1",
            "tags": {
              "Name": "IGW-AnyCompany-2"
            },
            "tags_all": {
              "Name": "IGW-AnyCompany-2"
            },
            "vpc_id": "vpc-081bbaeba52f02aa9"
          },
          "dependencies": [
            "aws_vpc.main_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "association_route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0654dade04c1a511b",
            "original_route_table_id": "rtb-0a0fa2783271ee2af",
            "region": "us-west-1",
            "route_table_id": "rtb-0f56c898cb45e6a33",
            "vpc_id": "vpc-00fa887fe40a32637"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway_main_a",
            "aws_route_table.route_table_public_anycompany_1",
            "aws_vpc.main_a",
            "aws_vpc.main_b",
            "aws_vpc_peering_connection.vpc_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "route_table_public_anycompany_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050f486b4453b6732",
            "original_route_table_id": "rtb-0d763ca8f84c7b132",
            "region": "us-west-1",
            "route_table_id": "rtb-06cefa2fccee7945d",
            "vpc_id": "vpc-081bbaeba52f02aa9"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway_main_b",
            "aws_route_table.route_table_public_anycompany_2",
            "aws_vpc.main_a",
            "aws_vpc.main_b",
            "aws_vpc_peering_connection.vpc_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09c6c92fd0dbc5665",
            "auto_provision_zones": "enabled",
            "auto_scaling_ips": "enabled",
            "availability_mode": "regional",
            "connectivity_type": "public",
            "id": "nat-15d1b75aeb814837a",
            "region": "us-west-1",
            "regional_nat_gateway_address": [
              {
                "allocation_id": "eipalloc-03033fa82ebfad7f6",
                "association_id": "eipassoc-08bb417ac17601a8f",
                "availability_zone": "us-west-1b",
                "availability_zone_id": "usw1-az3",
                "public_ip": "54.183.188.197",
                "status": "succeeded"
              }
            ],
            "regional_nat_gateway_auto_mode": "enabled",
            "route_table_id": "rtb-0f31287548e341005",
            "tags": {
              "Name": "NAT-AnyCompany"
            },
            "tags_all": {
              "Name": "NAT-AnyCompany"
            },
            "vpc_id": "vpc-00fa887fe40a32637"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.internet_gateway_main_a",
            "aws_vpc.main_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private_anycompany_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:271525114120:route-table/rtb-0650592f6aa08d703",
            "id": "rtb-0650592f6aa08d703",
            "owner_id": "271525114120",
            "propagating_vgws": [],
            "region": "us-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-15d1b75aeb814837a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RTB-Private-AnyCompany-1"
            },
            "tags_all": {
              "Name": "RTB-Private-AnyCompany-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fa887fe40a32637"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.internet_gateway_main_a",
            "aws_nat_gateway.nat_gateway",
            "aws_vpc.main_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public_anycompany_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:271525114120:route-table/rtb-0f56c898cb45e6a33",
            "id": "rtb-0f56c898cb45e6a33",
            "owner_id": "271525114120",
            "propagating_vgws": [],
            "region": "us-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bba4828c192440fb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.51.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0d81868669c5b07d2"
              }
            ],
            "tags": {
              "Name": "RTB-Public-AnyCompany-1"
            },
            "tags_all": {
              "Name": "RTB-Public-AnyCompany-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fa887fe40a32637"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway_main_a",
            "aws_vpc.main_a",
            "aws_vpc.main_b",
            "aws_vpc_peering_connection.vpc_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public_anycompany_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:271525114120:route-table/rtb-06cefa2fccee7945d",
            "id": "rtb-06cefa2fccee7945d",
            "owner_id": "271525114120",
            "propagating_vgws": [],
            "region": "us-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d9fe044bf03f382e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.41.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0d81868669c5b07d2"
              }
            ],
            "tags": {
              "Name": "RTB-Public-AnyCompany-2"
            },
            "tags_all": {
              "Name": "RTB-Public-AnyCompany-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-081bbaeba52f02aa9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway_main_b",
            "aws_vpc.main_a",
            "aws_vpc.main_b",
            "aws_vpc_peering_connection.vpc_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_anycompany_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a0b4650e0f55fef",
            "region": "us-west-1",
            "route_table_id": "rtb-06cefa2fccee7945d",
            "subnet_id": "subnet-0390e09adbc231a0e"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway_main_b",
            "aws_route_table.route_table_public_anycompany_2",
            "aws_subnet.subnet_anycompany_2_a",
            "aws_vpc.main_a",
            "aws_vpc.main_b",
            "aws_vpc_peering_connection.vpc_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c83e5ad3e4baf75f",
            "region": "us-west-1",
            "route_table_id": "rtb-0650592f6aa08d703",
            "subnet_id": "subnet-04e560a4efb54fd55"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.internet_gateway_main_a",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.route_table_private_anycompany_1",
            "aws_subnet.main_b",
            "aws_vpc.main_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f3c4c32dc0f7f84",
            "region": "us-west-1",
            "route_table_id": "rtb-0f56c898cb45e6a33",
            "subnet_id": "subnet-0ca508c51c4376261"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway_main_a",
            "aws_route_table.route_table_public_anycompany_1",
            "aws_subnet.main_a",
            "aws_vpc.main_a",
            "aws_vpc.main_b",
            "aws_vpc_peering_connection.vpc_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:271525114120:subnet/subnet-0ca508c51c4376261",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.41.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca508c51c4376261",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "271525114120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Name": "Subnet-A",
              "VPC": "VPC-AnyCompany-1"
            },
            "tags_all": {
              "Name": "Subnet-A",
              "VPC": "VPC-AnyCompany-1"
            },
            "vpc_id": "vpc-00fa887fe40a32637"
          },
          "dependencies": [
            "aws_vpc.main_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:271525114120:subnet/subnet-04e560a4efb54fd55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.41.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e560a4efb54fd55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "271525114120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Name": "Subnet-B",
              "VPC": "VPC-AnyCompany-1"
            },
            "tags_all": {
              "Name": "Subnet-B",
              "VPC": "VPC-AnyCompany-1"
            },
            "vpc_id": "vpc-00fa887fe40a32637"
          },
          "dependencies": [
            "aws_vpc.main_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_anycompany_2_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:271525114120:subnet/subnet-0390e09adbc231a0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.51.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0390e09adbc231a0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "271525114120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Name": "Subnet-A",
              "VPC": "VPC-AnyCompany-2"
            },
            "tags_all": {
              "Name": "Subnet-A",
              "VPC": "VPC-AnyCompany-2"
            },
            "vpc_id": "vpc-081bbaeba52f02aa9"
          },
          "dependencies": [
            "aws_vpc.main_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:271525114120:vpc/vpc-00fa887fe40a32637",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.41.0.0/16",
            "default_network_acl_id": "acl-021d62005a338d843",
            "default_route_table_id": "rtb-0f56c898cb45e6a33",
            "default_security_group_id": "sg-0ed0a9b51c46201f1",
            "dhcp_options_id": "dopt-0ffff8b1a1c0d188d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00fa887fe40a32637",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f56c898cb45e6a33",
            "owner_id": "271525114120",
            "region": "us-west-1",
            "tags": {
              "Name": "VPC-AnyCompany-1"
            },
            "tags_all": {
              "Name": "VPC-AnyCompany-1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:271525114120:vpc/vpc-081bbaeba52f02aa9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.51.0.0/16",
            "default_network_acl_id": "acl-04a8e00e2f383cac6",
            "default_route_table_id": "rtb-06cefa2fccee7945d",
            "default_security_group_id": "sg-003c598d86dddb8b8",
            "dhcp_options_id": "dopt-0ffff8b1a1c0d188d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-081bbaeba52f02aa9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06cefa2fccee7945d",
            "owner_id": "271525114120",
            "region": "us-west-1",
            "tags": {
              "Name": "VPC-AnyCompany-2"
            },
            "tags_all": {
              "Name": "VPC-AnyCompany-2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpc_endpoint_s3_anycompany_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:271525114120:vpc-endpoint/vpce-01e5970fbeb7d4af6",
            "cidr_blocks": [
              "52.219.220.0/23",
              "52.219.120.0/22",
              "16.15.0.0/21",
              "52.219.216.0/23",
              "52.219.194.0/24",
              "52.219.24.0/21",
              "52.219.112.0/21",
              "3.5.160.0/22",
              "52.219.255.0/24",
              "52.219.23.0/24",
              "52.219.192.0/23"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01e5970fbeb7d4af6",
            "ip_address_type": "ipv4",
            "owner_id": "271525114120",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ba54002",
            "private_dns_enabled": false,
            "region": "us-west-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0f56c898cb45e6a33"
            ],
            "service_name": "com.amazonaws.us-west-1.s3",
            "service_region": "us-west-1",
            "state": "available",
            "tags": {
              "Name": "VPC-Endpoint-AnyCompany"
            },
            "tags_all": {
              "Name": "VPC-Endpoint-AnyCompany"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-00fa887fe40a32637"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway_main_a",
            "aws_route_table.route_table_public_anycompany_1",
            "aws_vpc.main_a",
            "aws_vpc.main_b",
            "aws_vpc_peering_connection.vpc_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0d81868669c5b07d2",
            "peer_owner_id": "271525114120",
            "peer_region": "us-west-1",
            "peer_vpc_id": "vpc-081bbaeba52f02aa9",
            "region": "us-west-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "VPC-Peering-AnyCompany"
            },
            "tags_all": {
              "Name": "VPC-Peering-AnyCompany"
            },
            "vpc_id": "vpc-00fa887fe40a32637"
          },
          "dependencies": [
            "aws_vpc.main_a",
            "aws_vpc.main_b"
          ]
        }
      ]
    }
  ]
}